src/tests/variables/fail-mod1.err
Fatal error: exception Match_failure("ast.ml", 42, 19)